--- a/data-source.html
+++ b/data-source.html
@@ -31,7 +31,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="index.html"/>
+<link rel="prev" href="introduction.html"/>
 <link rel="next" href="model-estimations.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -81,7 +81,7 @@
 <li><a href="./"><CENTER>Modeling the COVID-19 spread</CENTER></a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
+<li class="chapter" data-level="1" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
 <li class="chapter" data-level="2" data-path="data-source.html"><a href="data-source.html"><i class="fa fa-check"></i><b>2</b> Data source</a></li>
 <li class="chapter" data-level="3" data-path="model-estimations.html"><a href="model-estimations.html"><i class="fa fa-check"></i><b>3</b> Model Estimations</a></li>
 <li class="chapter" data-level="4" data-path="model-specifications.html"><a href="model-specifications.html"><i class="fa fa-check"></i><b>4</b> Model Specifications</a></li>
@@ -130,7 +130,7 @@ sources : <a href="https://data.humdata.org/dataset/novel-coronavirus-2019-ncov-
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="introduction.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="model-estimations.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
@@ -173,10 +173,11 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["COVID-19.pdf", "COVID-19.epub"],
+"download": null,
 "toc": {
 "collapse": "subsection"
-}
+},
+"search": false
 });
 });
 </script>
